04-products-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: service-ingress-demo
spec:
  type: ClusterIP
  selector:
    app: products-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
