06-products-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-nodeport
  namespace: service-ingress-demo
spec:
  type: NodePort
  selector:
    app: products-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30081
